--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=14.0.0",
-    "yarn": ">=1.22.0",
-    "npm": "please-use-yarn"
+    "yarn": ">=1.22.0"
   },
   "scripts": {
     "dev": "next dev",
@@ -21,11 +20,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
+    "husky": "^8.0.0",
     "typescript": "4.7.4"
   }
 }
