--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "yarn": ">=1.22.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -25,6 +25,7 @@
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "cross-env": "^7.0.3",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
     "husky": "^8.0.0",
