--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,23 @@
 {
-  "extends":[
+  "extends": [
+    "plugin:storybook/recommended",
     "next",
     "next/core-web-vitals",
     "eslint:recommended"
-
   ],
   "globals": {
-    "React":"readonly"
+    "React": "readonly"
   },
   "rules": {
-    "no-unused-vars":[1,{"args":"after-used","argsIgnorePattern":"^_"}]
-  }
+    "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
+  },
+  "overrides": [
+    {
+      "files": ["*stories.@(ts|tsx|js|jsx|mjs|cjs)"],
+      "rules": {
+        //example of overriding a rule
+        "storybook/hierarchy-separator": "error"
+      }
+    }
+  ]
 }
